--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
           </ul>
-        </div>
+        </div> 
         <!-- /.navbar-collapse -->
       </div>
       <!-- /.container-fluid -->
@@ -86,18 +86,18 @@
         <div class="row">
           <div class="col-md-4">
             <span class="glyphicon glyphicon-music"></span>
-            <h2>HTML & CSS</h2>
-            <p>I enjoy making the web come to life with Angular</p>
+            <h2>React JS</h2>
+            <p>React es la onda en manejo de componentes!</p>
           </div>
           <div class="col-md-4">
             <span class="glyphicon glyphicon-music"></span>
             <h2>JavaScript</h2>
-            <p>I enjoy making the web come to life with Angular</p>
+            <p>Javascript es la onda</p>
           </div>
           <div class="col-md-4">
             <span class="glyphicon glyphicon-music"></span>
-            <h2>React.JS</h2>
-            <p>I enjoy making the web come to life with Angular</p>
+            <h2>Bootstrap 3</h2>
+            <p>Bootstrap es la onda en la presentacion</p>
           </div>
         </div>
       </div>
